add exception handling for media types other than application/json